--- a/bin/package.json
+++ b/bin/package.json
@@ -4,18 +4,23 @@
   "author": "Milan Peters",
   "description": "base project with gulp",
   "dependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
     "lodash": "^4.10.0",
-    "object-assign": "^4.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "object-assign": "^4.0.1"
   },
   "devDependencies": {
     "browserify": "latest",
+    "del": "^2.2.0",
     "envify": "^3.2.0",
-    "uglify-js": "~2.4.15"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^3.7.0"
   }
 }
