--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "url": "https://git.luka.de/luka/base-project-width-gulp.git"
   },
   "dependencies": {
-    "bourbon-libsass": "^1.0.0",
     "lodash": "^4.10.0",
     "object-assign": "^4.0.1"
   },
@@ -22,6 +21,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "node-bourbon": "^4.2.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
