--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
